# aibox-reid

./: CMakeLists.txt  README  README.md  build.sh  common.hpp  ivas_crop.cpp  ivas_reid.cpp
config/: crop.json  draw_reid.json  ped_pp.json  refinedet.json  reid.json
notebook/: aibox-reid.ipynb  aibox.ipynb
reidtracker/: CMakeLists.txt  README.md  cmake.sh
reidtracker/include/vitis/ai/: reidtracker.hpp
reidtracker/src/: CMakeLists.txt  tracker_imp.cpp  tracker_imp.hpp
reidtracker/src/ftd/: ftd_filter_linear.cpp  ftd_filter_linear.hpp  ftd_structure.cpp  ftd_structure.hpp  ftd_trajectory.cpp  ftd_trajectory.hpp
reidtracker/test/: CMakeLists.txt  test_accuracy_reidtracker.cpp  test_images_reidtracker.cpp
script/: aa2.sh  aa2_ped_pp.json  aibox-reid-install.py  kernel_crop.json  kernel_refinedet_pruned_0_96.json  kernel_reid.json
src/: ivas_crop.cpp  ivas_drawreid.cpp  ivas_pedpp.c  ivas_reid.cpp  main.cpp  vvas_crop.cpp  vvas_drawreid.cpp  vvas_reid.cpp
